Bug 122079 - Pass VM instead of JSGlobalObject to ArrayPrototype constructor.
Summary: Pass VM instead of JSGlobalObject to ArrayPrototype constructor.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-29 15:08 PDT by Andreas Kling
Modified: 2013-09-29 17:55 PDT (History)
1 user (show)

See Also:


Attachments
Patch (3.98 KB, patch)
2013-09-29 16:08 PDT, Andreas Kling
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-09-29 15:08:28 PDT
Less loads.
Comment 1 Andreas Kling 2013-09-29 16:08:06 PDT
Created attachment 212936 [details]
Patch
Comment 2 Geoffrey Garen 2013-09-29 17:09:19 PDT
Comment on attachment 212936 [details]
Patch

r=me
Comment 3 WebKit Commit Bot 2013-09-29 17:55:48 PDT
Comment on attachment 212936 [details]
Patch

Clearing flags on attachment: 212936

Committed r156621: <http://trac.webkit.org/changeset/156621>
Comment 4 WebKit Commit Bot 2013-09-29 17:55:50 PDT
All reviewed patches have been landed.  Closing bug.