Pass VM instead of JSGlobalObject to ArrayPrototype constructor. <https://webkit.org/b/122079>

Reviewed by Geoffrey Garen.

ArrayPrototype doesn't need the global object for anything during
construction, so reduce the amount of loads by just passing the VM.


Canonical link: https://commits.webkit.org/140118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156621 268f45cc-cd09-0410-ab3c-d52691b4dbfc